# autopub-tests

./: CHANGELOG.md  README.md  RELEASE.md  event.json  push_to_main.json  pyproject.toml  squash_merge.json
.autopub/: release_data.json  release_info.json
.github/workflows/: debug.yml  release-check.yml  release-release.yml  release.yml
autopub_plugins/: github.py
autopub_plugins/github/: __init__.py  _base_github.py  all.py  github_pr_comment.py  invite_contributor.py  pr_comment.py  release.py
